tmp z-index fix

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -23,8 +23,3 @@
     padding: 5px;
     margin: 10px;
 }
-
-
-.modal-focused{
-    z-index: 4 !important;
-}
